Edited project image width so it'll fit in the project card (overflow bug at around 750px).

--- a/src/app/project-card/project-card.component.css
+++ b/src/app/project-card/project-card.component.css
@@ -30,7 +30,7 @@
 }
 
 .project-image {
-    width: 70vw;
+    width: 80%;
     height: 40vw;
     object-fit: cover;
     border-radius: 10px;
